adding shafer pic

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,7 +15,7 @@ menu:
       pageRef: /shafer
       weight: 2
     - name: About
-      pageRef: /about
+      pageRef: /
       weight: 3
     - name: Search
       weight: 4
